@@ -40,6 +40,7 @@ documents those changes that are of interest to users and administrators.
  -- Do not kill suspended jobs due to exceeding time limit.
  -- Add NoAddrCache CommunicationParameter.
  -- Don't ping powering up cloud nodes.
+ -- Add cloud_dns SlurmctldParameter.
 
 * Changes in Slurm 18.08.5-2
 ============================
